# opensse-schemes

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SConstruct  ci_config.scons  client_main.cpp  cmake-format.json  diana_client.cpp  diana_server.cpp  diane_client.cpp  diane_server.cpp  install_crypto_tk_deps.sh  install_grpc.sh  install_rocksdb.sh  inverted_index_test.json  main.cpp  server_main.cpp  sophos_client.cpp  sophos_server.cpp  test_diana.cpp  test_diane.cpp  test_janus.cpp  test_sophos.cpp
SSE Schemes.xcodeproj/: project.pbxproj
SSE_Schemes.xcodeproj/: project.pbxproj
ci/: build.sh  ci_config.scons  gen_coverage.sh  install_cmake.sh  install_crypto_tk_deps.sh  install_grpc.sh  install_rocksdb.sh  upload_report.sh
cmake/: FindGRPC.cmake  FindLibaio.cmake
lib/: CMakeLists.txt
lib/abstractio/: linux_aio_scheduler.cpp  linux_aio_scheduler.hpp  scheduler.cpp  thread_pool_aio_scheduler.cpp  thread_pool_aio_scheduler.hpp
lib/diana/: client_runner.cpp  server_runner.cpp  server_runner_private.hpp  token_tree.cpp
lib/include/sse/: configure.hpp.in
lib/include/sse/runners/diana/: client_runner.hpp  server_runner.hpp
lib/include/sse/runners/sophos/: sophos_client_runner.hpp  sophos_server_runner.hpp
lib/include/sse/schemes/abstractio/: awonvm_vector.hpp  kv_serializer.hpp  scheduler.hpp
lib/include/sse/schemes/diana/: diana_client.hpp  diana_server.hpp  token_tree.hpp  types.hpp
lib/include/sse/schemes/janus/: janus_client.hpp  janus_server.hpp  types.hpp
lib/include/sse/schemes/oceanus/: cuckoo.hpp  oceanus.hpp  oceanus_server.hpp  oceanus_server_builder.hpp  types.hpp
lib/include/sse/schemes/oceanus/details/: cuckoo.hpp  tethys.hpp  tethys_allocator.hpp  tethys_graph.hpp
lib/include/sse/schemes/pluto/: pluto_builder.hpp  pluto_client.hpp  pluto_server.hpp  rocksdb_store.hpp  types.hpp
lib/include/sse/schemes/sophos/: sophos_client.hpp  sophos_server.hpp
lib/include/sse/schemes/tethys/: core_types.hpp  tethys_builder.hpp  tethys_client.hpp  tethys_server.hpp  tethys_store.hpp  tethys_store_builder.hpp  types.hpp
lib/include/sse/schemes/tethys/details/: tethys_allocator.hpp  tethys_graph.hpp  tethys_utils.hpp
lib/include/sse/schemes/tethys/encoders/: encode_encrypt.hpp  encode_separate.hpp
lib/include/sse/schemes/utils/: concat_iterator.hpp  db_generator.hpp  logger.hpp  optional.hpp  rocksdb_wrapper.hpp  thread_pool.hpp  utils.hpp
lib/janus/: janus_client.cpp  janus_server.cpp
lib/oceanus/: cuckoo.cpp  oceanus_server_builder.cpp  tethys.cpp  tethys_allocator.cpp  tethys_graph.cpp
lib/pluto/: rocksdb_store.cpp
lib/protos/: build.scons  diana.proto  sophos.proto
lib/sophos/: sophos_client.cpp  sophos_client_runner.cpp  sophos_server.cpp  sophos_server_runner.cpp  sophos_server_runner_private.hpp
lib/tethys/: tethys_allocator.cpp  tethys_graph.cpp
lib/utils/: db_generator.cpp  logger.cpp  rocksdb_wrapper.cpp  utils.cpp
script_bench/: bench_1e6.sh  gen_latency_csv.py  gen_stats.py  graph_gen.py
scripts/: check_format.sh  ci_build.sh  cppcheck.sh  format.sh  tidy.sh
src/: CMakeLists.txt  build.scons  diana_client.cpp  diana_server.cpp  large_storage_sophos_client.cpp  large_storage_sophos_client.hpp  logger.cpp  logger.hpp  medium_storage_sophos_client.cpp  medium_storage_sophos_client.hpp  rocksdb_wrapper.cpp  rocksdb_wrapper.hpp  sophos_client.cpp  sophos_client.hpp  sophos_client_runner.cpp  sophos_client_runner.hpp  sophos_core.cpp  sophos_core.hpp  sophos_net_types.hpp  sophos_server.cpp  sophos_server.hpp  sophos_server_runner.cpp  sophos_server_runner.hpp  thread_pool.hpp  utils.cpp  utils.hpp
src/aux/: db_generator.cpp  db_generator.hpp
src/diana/: client_runner.cpp  client_runner.hpp  diana_client.hpp  diana_common.cpp  diana_common.hpp  diana_server.hpp  server_runner.cpp  server_runner.hpp  server_runner_private.hpp  token_tree.cpp  token_tree.hpp  types.hpp
src/diane/: client_runner.cpp  client_runner.hpp  diane_client.cpp  diane_client.hpp  diane_common.cpp  diane_common.hpp  diane_server.cpp  diane_server.hpp  server_runner.cpp  server_runner.hpp  token_tree.cpp  token_tree.hpp  types.hpp
src/include/sse/runners/diana/: client_runner.hpp  server_runner.hpp
src/include/sse/runners/sophos/: sophos_client_runner.hpp  sophos_net_types.hpp  sophos_server_runner.hpp
src/include/sse/schemes/diana/: diana_client.hpp  diana_common.hpp  diana_server.hpp  token_tree.hpp  types.hpp
src/include/sse/schemes/janus/: types.hpp
src/include/sse/schemes/sophos/: sophos_client.hpp  sophos_common.hpp  sophos_server.hpp
src/include/sse/schemes/utils/: db_generator.hpp  logger.hpp  rocksdb_wrapper.hpp  thread_pool.hpp  utils.hpp
src/janus/: janus_client.cpp  janus_client.hpp  janus_server.cpp  janus_server.hpp  types.hpp
src/protos/: build.scons  diana.proto  diane.proto  sophos.proto  sophos_proto.proto
src/sophos/: large_storage_sophos_client.cpp  large_storage_sophos_client.hpp  medium_storage_sophos_client.cpp  medium_storage_sophos_client.hpp  sophos_client.cpp  sophos_client.hpp  sophos_client_runner.cpp  sophos_client_runner.hpp  sophos_common.cpp  sophos_common.hpp  sophos_core.cpp  sophos_core.hpp  sophos_server.cpp  sophos_server.hpp  sophos_server_runner.cpp  sophos_server_runner.hpp  sophos_server_runner_private.hpp
src/utils/: db_generator.cpp  logger.cpp  logger.hpp  rocksdb_wrapper.cpp  rocksdb_wrapper.hpp  thread_pool.hpp  utils.cpp
test/: CMakeLists.txt  awonvm_vector.cpp  db_generator.cpp  debug_diana.cpp  debug_janus.cpp  debug_oceanus.cpp  debug_pluto.cpp  debug_sophos.cpp  debug_tethys.cpp  debug_tethys_core.cpp  debug_tethys_core_utils.hpp  debug_tethys_utils.hpp  diana.cpp  diana_runner.cpp  diana_runner.hpp  janus.cpp  oceanus.cpp  pluto.cpp  pluto_test_utils.hpp  rocksdb.cpp  runners.cpp  sophos.cpp  sophos_runner.cpp  sophos_runner.hpp  test.cpp  test.hpp  test_diana.cpp  test_sophos.cpp  tethys.cpp  tethys_graph.cpp  tethys_store.cpp  tethys_test_utils.hpp  utility.cpp  utility.hpp
(+19 files in other folders)
